2009-12-17	Glenn Humphrey <glenn.humphrey@OARcorp.com>

	* delay/init.c, event_server/init.c, msg_server/init.c,
	posix_cond_server/test.c, posix_delay_nanosleep/test.c,
	posix_delay_sleep/test.c, posix_mutex_server/test.c, ratemon1/init.c,
	ratemon2/init.c, ratemon_cond_server/test.c, sem_server/init.c,
	timeout_event/init.c: Cleaned up the led examples to produce similiar
	output.
	* timer_server/.cvsignore: New file.

2009-10-12	Glenn Humphrey <glenn.humphrey@OARcorp.com>

	* delay/init.c, event_server/init.c, msg_server/init.c,
	ratemon1/init.c, ratemon2/init.c, sem_server/init.c,
	timeout_event/init.c: Cleaned up unused variables and standardized
	for inclusion into RTEMS class materials.

2009-10-12	Glenn Humphrey <glenn.humphrey@OARcorp.com>

	* Makefile, timer/init.c: Split the timer example into two examples
	and cleaned up resource usage.
	* timer_server/Makefile, timer_server/init.c: New files.

2009-09-24	Joel Sherrill <joel.sherrill@oarcorp.com>

	* delay/init.c, ratemon1/init.c: Clean up configuration.

2009-08-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile: Add timer test.

2009-08-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* complex1/.main.cc.swp: Removed.

2009-08-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* ChangeLog: New file.
